hphp/hack/test/typecheck/primitive_casing.php.exp
File "primitive_casing.php", line 3, characters 23-28:
Keyword `String` must be written in lowercase (Parsing[1002])
File "primitive_casing.php", line 3, characters 12-14:
Unbound name: `Vec` (Naming[2049])
File "primitive_casing.php", line 3, characters 23-28:
Unbound name: `String` (Naming[2049])
File "primitive_casing.php", line 4, characters 10-12:
Invalid return type (Typing[4110])
  File "primitive_casing.php", line 3, characters 23-28:
  Expected `String`
  File "primitive_casing.php", line 4, characters 10-12:
  But got `string`
