hphp/hack/test/typecheck/primitive_casing.php
<?hh // partial

function f(Vec $arr): String {
  return 's';
}
